# x86_real-mode-to-protected-mode

./: CMakeLists.txt  README.md
modules/: CMakeASM_ASCompiler.cmake  CMakeASM_ASInformation.cmake  CMakeDetermineASM_ASCompiler.cmake  CMakeTestASM_ASCompiler.cmake  default_proj.cmake  setup_gas.cmake
script/: strip_elf32.sh
src/: asm_test.s  display.s
